# MeshNOW

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
components/meshnow/: CMakeLists.txt  conn_initiator.cpp  handshaker.cpp  idf_component.yml  keep_alive.cpp  meshnow.cpp  networking.cpp  packet_handler.cpp  packets.cpp  router.cpp  routing.cpp  send_worker.cpp  seq.cpp
components/meshnow/include/: constants.hpp  error.hpp  handshaker.hpp  keep_alive.hpp  layout.hpp  main_worker.hpp  meshnow.h  meshnow.hpp  networking.hpp  packet_handler.hpp  packets.hpp  receive_meta.hpp  router.hpp  routing.hpp  send_worker.hpp  state.hpp
components/meshnow/include/now_lwip/: io.hpp  netif.hpp
components/meshnow/main_worker/: fragment.cpp  fragment.hpp  hand_shaker.cpp  hand_shaker.hpp  keep_alive.cpp  keep_alive.hpp  main_worker.cpp  packet_handler.cpp  packet_handler.hpp  worker_task.hpp
components/meshnow/now_lwip/: io.cpp  netif.cpp  netif.hpp
components/meshnow/private_include/: handshaker.hpp  internal.hpp  meshnow_internal.h  networking.h  seq.hpp
components/meshnow/src/: event.cpp  event.hpp  event_internal.hpp  fragments.cpp  fragments.hpp  internal.cpp  internal.hpp  layout.cpp  layout.hpp  meshnow.cpp  mtx.hpp  networking.cpp  networking.hpp  packets.cpp  packets.hpp  state.cpp  state.hpp  wifi.cpp  wifi.hpp
components/meshnow/src/job/: connect.cpp  connect.hpp  connect_old.cpp  fragment_gc.cpp  fragment_gc.hpp  hand_shaker.cpp  hand_shaker.hpp  keep_alive.cpp  (+6 more)
components/meshnow/test/: CMakeLists.txt  test_packets.cpp
(+155 files in other folders)
